--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -16,8 +16,6 @@
 
     .page-projects & {
         margin: 2rem 0 4rem;
-        color: var(--color-dark);
-        border-radius: var(--border-radius);
 
         @media screen and (min-width: 37.5em) {
             margin-bottom: 5rem;
