--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,9 +4,6 @@
 :root {
 	--base-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	--color-bg: #f5eee4;
-	--color-dark: #010048;
-	--color-medium: #010057;
-	--color-light: #02006c;
 	--color-text: #fff;
 	--color-text-dark: #101010;
 	--color-code-bg: #101010;
